--- a/SpringBoot_MyBatis_Cafe2/src/main/resources/static/index.html
+++ b/SpringBoot_MyBatis_Cafe2/src/main/resources/static/index.html
@@ -15,6 +15,20 @@
 
   <!-- Custom styles for this template -->
   <link href="css/shop-homepage.css" rel="stylesheet">
+  
+    <!-- jQuery library --> 
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
+
+ 
+
+<!-- Latest compiled JavaScript --> 
+
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> 
+
+   
+
+  <script type="text/javascript" src="js/my.js"></script> 
 
 </head>
 
@@ -23,7 +37,19 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Start Bootstrap</a>
+<div class="navbar-brand" href="#"> 
+
+      	<div id="msgDiv"> 
+
+      		ID<input size="5" id="id"> 
+
+      		PW<input size="5" id="pw" type="password"> 
+
+      		<input type="button" id="loginBtn" value="login"> 
+
+      	</div> 
+
+      </div> 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -41,7 +67,7 @@
             <a class="nav-link" href="#">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+<a class="nav-link" href="#" onclick="window.open('html/memberInsertForm.html', '_blank', 'toolbar=yes,scrollbars=yes,resizable=yes,top=50,left=500,width=400,height=750');">회원가입</a> 
           </li>
         </ul>
       </div>
