--- a/SpringBoot_MyBatis_Cafe2/src/main/resources/static/index.html
+++ b/SpringBoot_MyBatis_Cafe2/src/main/resources/static/index.html
@@ -16,19 +16,14 @@
   <!-- Custom styles for this template -->
   <link href="css/shop-homepage.css" rel="stylesheet">
   
-    <!-- jQuery library --> 
+  <!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  
+  <script type="text/javascript" src="js/my.js"></script>
 
- 
-
-<!-- Latest compiled JavaScript --> 
-
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> 
-
-   
-
-  <script type="text/javascript" src="js/my.js"></script> 
 
 </head>
 
@@ -37,19 +32,14 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-<div class="navbar-brand" href="#"> 
+      <div class="navbar-brand" href="#">
+      	<div id="msgDiv">
+      		ID<input size="5" id="id">
+      		PW<input size="5" id="pw" type="password">
+      		<input type="button" id="loginBtn" value="login">
+      	</div>
+      </div>
 
-      	<div id="msgDiv"> 
-
-      		ID<input size="5" id="id"> 
-
-      		PW<input size="5" id="pw" type="password"> 
-
-      		<input type="button" id="loginBtn" value="login"> 
-
-      	</div> 
-
-      </div> 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -61,13 +51,13 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="#" onclick="window.open('camera.html', '_blank', 'toolbar=yes,scrollbars=yes,resizable=yes,top=50,left=500,width=750,height=400');">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
+            <a class="nav-link" href="#" onclick="window.open('event.html', '_blank', 'toolbar=yes,scrollbars=yes,resizable=yes,top=50,left=500,width=750,height=400');">지점 이벤트</a>
           </li>
           <li class="nav-item">
-<a class="nav-link" href="#" onclick="window.open('html/memberInsertForm.html', '_blank', 'toolbar=yes,scrollbars=yes,resizable=yes,top=50,left=500,width=400,height=750');">회원가입</a> 
+            <a class="nav-link" href="#" onclick="window.open('memberInsertForm.html', '_blank', 'toolbar=yes,scrollbars=yes,resizable=yes,top=50,left=500,width=400,height=750');">회원가입</a>
           </li>
         </ul>
       </div>
@@ -127,9 +117,9 @@
               <a href="#"><img class="card-img-top" src="img/americano.png" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-<a href="#" class="orderForm" name="아메리카노">아메리카노</a>
+                  <a href="#" class="orderForm" name="아메리카노">아메리카노</a>
                 </h4>
-                <h5>2,500원</h5>
+                <h5>2500원</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
               </div>
               <div class="card-footer">
@@ -143,9 +133,9 @@
               <a href="#"><img class="card-img-top" src="img/cafelatte.png" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">카페라떼</a>
+                  <a href="#" class="orderForm" name="카페라떼">카페라떼</a>
                 </h4>
-                <h5>3,000원</h5>
+                <h5>3000원</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
               </div>
               <div class="card-footer">
@@ -159,9 +149,9 @@
               <a href="#"><img class="card-img-top" src="img/cafemocha.png" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#" class="orderForm" name="카페모카">카페모카</a> 
+                  <a href="#" class="orderForm" name="카페모카">카페모카</a>
                 </h4>
-                <h5>2,750원</h5>
+                <h5>3500원</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
               </div>
               <div class="card-footer">
@@ -175,9 +165,9 @@
               <a href="#"><img class="card-img-top" src="img/cappuccino.png" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">카푸치노</a>
+                  <a href="#" class="orderForm" name="카푸치노">카푸치노</a>
                 </h4>
-                <h5>2,600원</h5>
+                <h5>3800원</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
               </div>
               <div class="card-footer">
@@ -188,12 +178,12 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="img/CuatroCheesePizza.jpg" alt=""></a>
+              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">치츠 피자</a>
+                  <a href="#">Item Five</a>
                 </h4>
-                <h5>3억원</h5>
+                <h5>$24.99</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur! Lorem ipsum dolor sit amet.</p>
               </div>
               <div class="card-footer">
@@ -204,13 +194,13 @@
 
           <div class="col-lg-4 col-md-6 mb-4">
             <div class="card h-100">
-              <a href="#"><img class="card-img-top" src="img/dutchcoffee.png" alt=""></a>
+              <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
               <div class="card-body">
                 <h4 class="card-title">
-                  <a href="#">더치커피</a>
+                  <a href="#">Item Six</a>
                 </h4>
-                <h5>10억</h5>
-                <p class="card-text">야 더치 커피가 뭐냐 처음 듣는건데</p>
+                <h5>$24.99</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
               </div>
               <div class="card-footer">
                 <small class="text-muted">&#9733; &#9733; &#9733; &#9733; &#9734;</small>
@@ -244,20 +234,24 @@
 
 </body>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script> 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+<script>
+$(function(){
 
-<script> 
-
-$(function(){ 
-
- 
-
-var login=$.cookie('logined'); 
-
-$("#msgDiv").html(login); 
-
-}); 
-
-</script> 
+var login=$.cookie('logined');
+$("#msgDiv").html(login);
+});
+</script>
 
 </html>
+
+
+
+
+
+
+
+
+
+
+
