--- a/SpringBoot_MyBatis_Cafe2/src/main/resources/static/index.html
+++ b/SpringBoot_MyBatis_Cafe2/src/main/resources/static/index.html
@@ -51,7 +51,16 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" onclick="window.open('camera.html', '_blank', 'toolbar=yes,scrollbars=yes,resizable=yes,top=50,left=500,width=750,height=400');">About</a>
+            <a class="nav-link" href="#" onclick="window.open('camera.html', '_blank', 'toolbar=yes,scrollbars=yes,resizable=yes,top=50,left=500,width=750,height=400');">웹캠</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" onclick="window.open('cameraMobile.html', '_blank', 'toolbar=yes,scrollbars=yes,resizable=yes,top=50,left=500,width=750,height=400');">모바일캠</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" onclick="window.open('fileUpload.html', '_blank', 'toolbar=yes,scrollbars=yes,resizable=yes,top=50,left=500,width=750,height=400');">파일 전송</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" onclick="window.open('fileUpload-OnlyHTML.html', '_blank', 'toolbar=yes,scrollbars=yes,resizable=yes,top=50,left=500,width=750,height=400');">파일 전송-Test</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#" onclick="window.open('event.html', '_blank', 'toolbar=yes,scrollbars=yes,resizable=yes,top=50,left=500,width=750,height=400');">지점 이벤트</a>
