--- a/SpringBoot_MyBatis_Cafe2/src/main/resources/static/camera.html
+++ b/SpringBoot_MyBatis_Cafe2/src/main/resources/static/camera.html
@@ -82,8 +82,8 @@ var localstream;
 		});
 		
 		$("#offBtn").click(function(){
-			alert('카메라 끈다!!!!!!!!!')
-
+			alert('카메라 끈다!!!!!!!!!');
+			video.src="";
 		});
 		
 	});
